--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: white;
+  background-color: #e6ffe6;
   display: flex;
   justify-content: center;
   align-items: center;
