--- a/src/components/Quiz/style.css
+++ b/src/components/Quiz/style.css
@@ -1,5 +1,20 @@
+.question_image{
+  /* display: none; */
+  max-width: 90%;
+  max-height: 45%;
+  left: 0;
+  right: 60%;
+  bottom: 10%;
+  justify-content: center;
+  align-items: center;
+  /* bottom: 50%; */
+  position: absolute;
+
+}
+
 .question-section {
   width: 100%;
+  height: 20rem;
   position: relative;
 }
 
